<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_search">Search bar</string>
    <string name="action_settings">Settings</string>
    <string name="actionbar_items_selected">0 Items Selected</string>
    <string name="actionbar_statistics">Statistics</string>
    <string name="add_alg_btn">Add Algorithm</string>
    <string name="add_algorithm_pic">Add Image of Algroithm</string>
    <string name="add_algorithm_pic_description">Placehlder for added algorithm picture</string>
    <string name="add_solution_icon">Icon for Solution</string>
    <string name="add_step_btn">+ Add Step</string>
    <string name="add_step_end_image">Add Step End Image</string>
    <string name="add_step_name">Step Name e.g. First Layer</string>
    <string name="add_step_start_image">Add Step Start Image</string>
    <string name="alg_icon_description">Image of Case</string>
    <string name="alg_step1">Clockwise F</string>
    <string name="alg_step2">Clockwise R</string>
    <string name="alg_step3">Clockwise U</string>
    <string name="alg_step4">AntiClockwise F</string>
    <string name="alg_step5">AntiClockwise R</string>
    <string name="alg_step6">Then finishing up with an: AntiClockwise U</string>
    <string name="algorithm_cancel">Cancel</string>
    <string name="algorithm_category_name">Algorithm Category</string>
    <string name="algorithm_confirm_save">Save</string>
    <string name="algorithm_description">Give the algorithm a description</string>
    <string name="algorithm_description_hint">e.g. Where did you find this algorithm? What does it do? 1st GEN or 2nd GEN? etc</string>
    <string name="algorithm_item_algorithm">Algorithm</string>
    <string name="algorithm_item_name">Algorithm Name</string>
    <string name="algorithm_item_practiced_vs_correct">Practiced/Correct:</string>
    <string name="algorithm_name">Enter Name of Algorithm</string>
    <string name="algorithm_name_header">Input Name of Algorithm</string>
    <string name="algorithms_intro">How Algorithms Work</string>
    <string name="algorithms_notation_description">Algorithms are made up of Moves, Slices and Rotations performed one after another.\n\nAlgorithms are noted down with commas between the moves and sometimes brackets used to separate up chunks of algorithms</string>
    <string name="algorithms_notation_description1">Like with the algorithm below</string>
    <string name="algorithms_notation_description2">The image shown is the case or situation and shows how the cube should be held before the algorithm is performed</string>
    <string name="algorithms_notation_description3">These steps can be read as:</string>
    <string name="anticlockwise_b">Back Anti-clockwise: B\'\nAnti Clockwise turn of the back layer</string>
    <string name="anticlockwise_d">Down Anti-clockwise: D\'\nAnti Clockwise turn of the down layer</string>
    <string name="anticlockwise_f">Front Anti-clockwise: F\'\nAnti Clockwise turn of the front layer</string>
    <string name="anticlockwise_l">Left Anti-clockwise: L\'\nAnti Clockwise turn of the left layer</string>
    <string name="anticlockwise_r">Right Anti-clockwise: R\'\nAnti Clockwise turn of the right layer</string>
    <string name="anticlockwise_u">Up Anti-clockwise: U\'\nAnti Clockwise turn of the up layer</string>
    <string name="app_icon_description">Icon for App Algorubick</string>
    <string name="app_name">Algorubick</string>
    <string name="app_name_short">Algorubick</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_open_text">Sound for application open:</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="avg_100">00:00.00</string>
    <string name="avg_100_text">Avg of 100: </string>
    <string name="avg_100_time">00:00.00</string>
    <string name="avg_12">00:00.00</string>
    <string name="avg_12_text">Avg of 12: </string>
    <string name="avg_12_time">00:00.00</string>
    <string name="avg_5">00:00.00</string>
    <string name="avg_50">00:00.00</string>
    <string name="avg_50_text">Avg of 50:</string>
    <string name="avg_50_time">00:00.00</string>
    <string name="avg_5_text">Avg of 5:</string>
    <string name="avg_5_time">00:00.00</string>
    <string name="back_face">The <b>Back</b> face\nThe face at the back of the cube</string>
    <string name="bcc">0 / 9</string>
    <string name="bckspace_btn">&lt; Backspace</string>
    <string name="best_time">Best Time: </string>
    <string name="best_time_time">00:00.00</string>
    <string name="block_alg_1">[D,E,F,A,U,L,T,A,L,G]</string>
    <string name="block_text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie, nibh sit amet tempus pellentesque, quam mi lobortis sapien, quis hendrerit elit tellus sodales ligula. Integer vestibulum ut quam at pulvinar. Lorem ipsum dolor sit amet. sit amet</string>
    <string name="blue_text">Blue:</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_2">2</string>
    <string name="btn_b">b</string>
    <string name="btn_backspace">&lt;&lt;</string>
    <string name="btn_d">d</string>
    <string name="btn_e">E</string>
    <string name="btn_f">f</string>
    <string name="btn_l">l</string>
    <string name="btn_m">M</string>
    <string name="btn_prime">\'</string>
    <string name="btn_r">r</string>
    <string name="btn_s">S</string>
    <string name="btn_u">u</string>
    <string name="btn_x">X</string>
    <string name="btn_y">Y</string>
    <string name="btn_z">Z</string>
    <string name="button">Button</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_btn">Cancel</string>
    <string name="case_date_created">Date and Time Created</string>
    <string name="case_name">Case Name</string>
    <string name="case_name_header">Enter a name for the new case</string>
    <string name="case_name_text">Unnamed case</string>
    <string name="character_counter_content_description" tools:ignore="PrivateResource">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description" tools:ignore="PrivateResource">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern" tools:ignore="PrivateResource">%1$d / %2$d</string>
    <string name="check_alg">Check Algorithm</string>
    <string name="check_correct_btn">Check Alg</string>
    <string name="chip_text" tools:ignore="PrivateResource">Chip text</string>
    <string name="clear_text_end_icon_content_description" tools:ignore="PrivateResource">Clear text</string>
    <string name="clockwise_b">Back clockwise: B\nClockwise turn of the back layer</string>
    <string name="clockwise_d">Down clockwise: D\nClockwise turn of the down layer</string>
    <string name="clockwise_f">Front clockwise: F\nClockwise turn of the front layer</string>
    <string name="clockwise_l">Left clockwise: L\nClockwise turn of the left layer</string>
    <string name="clockwise_r">Right clockwise: R\nClockwise turn of the right layer</string>
    <string name="clockwise_u">Up clockwise: U\nClockwise turn of the up layer</string>
    <string name="close_button">X</string>
    <string name="confirm">Yes</string>
    <string name="contextual_learn">Learn Cntxt</string>
    <string name="contextual_practice">Practice Cntxt</string>
    <string name="copy">Copy</string>
    <string name="correctx">0</string>
    <string name="count_time">Count:</string>
    <string name="count_time_text">Total Solves</string>
    <string name="count_time_time">00:00.00</string>
    <string name="create_case_heading">Create new case</string>
    <string name="create_case_subheading">Select a colour and assign it to a location on the grid</string>
    <string name="create_new_alg">Create New Algorithm</string>
    <string name="create_new_solution">New Solution</string>
    <string name="create_step">Add Step</string>
    <string name="cube_simulator_description">Placeholder for Rubiks Cube Simulator</string>
    <string name="cube_time">00:00.00</string>
    <string name="current_alg_hint">Current Algorithm: </string>
    <string name="current_alg_text">Text for algorithm</string>
    <string name="custom_chckbox">Custom Algorithm</string>
    <string name="daily_practice_time_text">Set daily practice time:</string>
    <string name="delete_all_steps">Delete All Steps</string>
    <string name="delete_btn">&lt;&lt;</string>
    <string name="delete_last_step">Delete Last Step</string>
    <string name="delete_solution_menu_icon">Delete Solution</string>
    <string name="developer">Joshua Orotayo</string>
    <string name="developer_email">orotayjk@aston.ac.uk</string>
    <string name="dialog_alg_image_alg">ALGORITHM</string>
    <string name="dialog_alg_image_icon">Icon for the Algorithm Dialog</string>
    <string name="dialog_alg_image_name">Algorithm Name</string>
    <string name="dialog_body_text">Text inside the body of the dialog</string>
    <string name="dialog_image">Dialog Image</string>
    <string name="dialog_title">DialogTitle</string>
    <string name="dnf_button">DNF</string>
    <string name="dnf_solve_icon_description">Mark Solve as DNF</string>
    <string name="item_solve_cube_size">[SIZE]</string>
    <string name="item_solve_date">[DATE]</string>
    <string name="item_solve_position">[X]</string>
    <string name="item_solve_time">[mm:ss:.ms]</string>
    <string name="searchview">Search</string>
    <string name="shift_btn">^</string>
    <string name="space"> </string>
    <string name="tab_title_algorithms">Algorithms</string>
    <string name="tab_title_faces">Faces</string>
    <string name="tab_title_intro">Intro</string>
    <string name="tab_title_moves">Moves</string>
    <string name="tab_title_rotations">Rotations</string>
    <string name="tab_title_slices">Slices</string>
    <string name="tab_title_two_layer">Two Layer Moves</string>
    <string name="title_home">Home</string>
    <string name="title_notation_help">Notation</string>
    <string name="title_solution_guide">Solutions</string>
    <string name="title_timer">Timer</string>
    <string name="btn_w">W</string>
</resources>